# jsonStroller

./: .gitignore  CMakeLists.txt  README.md
doc/: jsonstroll.1
include/: config.h  curseOutput.hh  curseSimpleOutput.hh  curseSplitOutput.hh  diffCmd.hh  except.hh  fifoMap.hpp  inputSequence.hh  jsonArray.hh  jsonContainer.hh  jsonElement.hh  jsonException.hh  jsonObject.hh  jsonObjectEntry.hh  jsonPrimitive.hh  levenshtein.hh  levenshtein.hpp  levenshteinCache.hh  levenshteinMatrice.hpp  linearHistory.hh  optional.hpp  outputFlag.hh  params.hh  params.hpp  searchPattern.hh  simpleOutput.hh  streamConsumer.hh  unicode.hpp  warning.hh  wrappedBuffer.hpp
src/: curseOutput.cpp  curseSimpleOutput.cpp  curseSplitOutput.cpp  diffCmd.cpp  except.cpp  inputSequence.cpp  jsonArray.cpp  jsonContainer.cpp  jsonElement.cpp  jsonException.cpp  jsonObject.cpp  jsonObjectEntry.cpp  jsonPrimitive.cpp  levenshtein.cpp  linearHistory.cpp  main.cpp  outputFlag.cpp  params.cpp  searchPattern.cpp  simpleOutput.cpp  streamConsumer.cpp  unicode.cpp  warning.cpp
test/: bigarray.json  bigobj.json  doubleKey.json  longline.json  longline2.json  test.json  test2.json  testArray1.json  testArray2.json  testDiffAdd.2.json  testDiffMod.2.json  testDiffObj.1.json  testDiffObj.2.json  testDiffObj.3.json  testDiffObj.4.json  testDiffObj.5.json  testDiffObj.6.json  testDiffObj.7.json  testDiffObjSimple.1.json  testDiffObjSimple.3.json  testDiffObjSimple.4.json  testDiffSubAdd.2.json  testDiffSubAdd.3.json  testDiffSubAdd.4.json  testDiffSubAdd.5.json  testDiffSubAdd.6.json  testDiffSubAdd.json  testFailSearch.json  testObject.json  testObjectUnordered.json  testUnicode.json  testsmall.json
test/src/: levenshtein_test.cpp  main.cpp  optional.cpp  unicode.cpp  wrapped.cpp
